# spark2_sdk

./: README.md  repository-structure-and-api.md
configuration/: config.yaml
configuration/share/config/assembly/: no_gripper.yaml
configuration/share/config/components/: arm_v1.yaml
configuration/share/meshes/arm/: L1.STL  L2.STL  L3.STL  L4.STL  L5.STL  L6.STL  base_link.STL
configuration/share/no_gripper/: arm_v1.urdf
cpp/: BUILD_DEPENDENCIES.md  CMakeLists.txt  README.md  spark2_sdk_cpp.md
cpp/examples/: calculate_kinematics.cpp  move_path.cpp  move_point.cpp  move_single_point.cpp  playback_mode.cpp  set_configuration.cpp  teach_and_playback.cpp  teach_mode.cpp
cpp/include/: kinematics.h  spark.h  spark2.h  types.h
cpp/src/: configurator.cpp  configurator.h  configurator_impl.h  kinematics.cpp  kinematics.h  kinematics_impl.h  spark.cpp  spark.h  spark2.cpp
cpp/src/pybind11/: bindings.cpp
python/: pyproject.toml  spark2_sdk_python.md
python/examples/: calculate_kinematics.py  move_path.py  move_point.py  playback_mode.py  set_configuration.py  teach_and_playback.py  teach_mode.py
python/spark2_sdk/: __init__.py  configurator.py  convertor.py  kinematics.py  spark2.py  types.py  utils.py
spark2_cpp_dist/: CMakelists.txt  spark2_sdk_cpp.md
spark2_cpp_dist/examples/: move_path.cpp  move_point.cpp  teach_and_playback.cpp
spark2_cpp_dist/include/: configurator.h  kinematics.h  spark2.h
spark2_cpp_dist/lib/win_x64/msvc2022_v143/: spark2_sdk.lib
spark2_python_dist/: spark2_sdk_python.md
spark2_python_dist/examples/: calculate_kinematics.py  move_path.py  move_point.py  set_configuration.py  teach_and_playback.py  utils.py
spark2_python_dist/spark2_sdk/: __init__.py  kinematics.py  types.py
spark2_python_dist/spark2_sdk/lib/win_x64/msvc2022_v143/: _spark2_sdk_cpp.cp310-win_amd64.pyd  _spark2_sdk_cpp.cp312-win_amd64.pyd
